--- a/tags/templates/page/1/index.html
+++ b/tags/templates/page/1/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://gourabdg47.github.io/Blog/tags/templates/</title><link rel=canonical href=https://gourabdg47.github.io/Blog/tags/templates/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://gourabdg47.github.io/Blog/tags/templates/"></head></html>
+<!DOCTYPE html><html><head><title>/tags/templates/</title><link rel="canonical" href="/tags/templates/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=/tags/templates/" /></head></html>
